jminor_server.policy updated using pro-grade, jar versions still hardcoded, some work required to use