@@ -26,6 +26,8 @@ dependencies {
     serverRuntime project(':jminor-plugin-hikari-pool')
     serverRuntime project(':jminor-plugin-logback-proxy')
 
+//    runtimeOnly 'net.sourceforge.pro-grade:pro-grade:1.1.2-SNAPSHOT'
+
     serverRuntime project(path: ':jminor-demos-empdept', configuration: 'domain')
     serverRuntime project(path: ':jminor-demos-chinook', configuration: 'domain')
     serverRuntime project(path: ':jminor-demos-petclinic', configuration: 'domain')
@@ -66,7 +68,9 @@ applicationDistribution.from(configurations.serverRuntime.files) {
 applicationDistribution.from(files(
         'src/main/security/jminor_keystore.jks',
         'src/main/security/jminor_truststore.jks',
+        'src/main/security/jminor_server.policy',
         'src/main/security/all_permissions.policy',
+        'src/main/security/default.policy',
         'src/main/security/serialization-whitelist.txt')) {
     into("config")
 }
@@ -92,8 +96,17 @@ applicationDistribution.from(files('../../demos/chinook/build/classes/reports/cu
     into("reports")
 }
 applicationDefaultJvmArgs = [
-        "-Djava.security.policy=../config/all_permissions.policy",
-        "-Djminor.configurationFile=../config/h2_embedded.config"
+        "-Djminor.configurationFile=../config/h2_embedded.config",
+        "-Dlogback.configurationFile=../config/logback.xml",
+        "-Djava.security.policy=../config/all_permissions.policy"
+]
+
+def applicationGenerateSecurityPolicyJvmArgs = [
+        "-Djminor.configurationFile=../config/h2_embedded.config",
+        "-Dlogback.configurationFile=../config/logback.xml",
+        "-Djava.security.manager=net.sourceforge.prograde.sm.PolicyFileGeneratorJSM",
+        "-Djava.security.policy=../config/default.policy",
+        "-Dprograde.generated.policy=../config/generated.policy"
 ]
 
 task runServer(type: JavaExec, dependsOn: createServerKeystore) {
@@ -118,10 +131,10 @@ task runServer(type: JavaExec, dependsOn: createServerKeystore) {
             'jminor.server.serializationFilterDryRun'   : 'false',
             'jminor.server.loginProxyClasses'           : 'org.jminor.framework.demos.chinook.server.ChinookLoginProxy',
             'javax.net.ssl.keyStore'                    : 'src/main/security/jminor_keystore.jks',
-            'java.security.policy'                      : 'src/main/security/all_permissions.policy',
             'javax.net.ssl.keyStorePassword'            : 'crappypass',
             'java.rmi.server.hostname'                  : 'localhost',
-            'logback.configurationFile'                 : 'src/main/config/logback.xml'
+            'logback.configurationFile'                 : 'src/main/config/logback.xml',
+            'java.security.policy'                      : 'src/main/security/all_permissions.policy'
     ]
 }
 
